correcciones de estilos en navbar

--- a/src/components/inicio/Home.css
+++ b/src/components/inicio/Home.css
@@ -1,5 +1,7 @@
 main {
-    background-color: var(--bg-color);
+    background: var(--bg);
+    background-size: cover;
     width: 100%;
-    min-height: 100vh;
+    height: 100vh;
+    overflow-y: scroll;
 }
