--- a/src/components/navbar/NavbarTask.css
+++ b/src/components/navbar/NavbarTask.css
@@ -3,9 +3,9 @@
   position: fixed;
   top: 0;
   left: 0;
-  backdrop-filter: blur(40px);
   z-index: 100;
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
+  background-color: rgba(0, 0, 0);
 }
 .nav {
   height: 10vh;
@@ -20,15 +20,14 @@
   font-weight: var(--font-bold);
 }
 @media screen and (max-width: 1023px) {
-
   .nav-menu {
     position: fixed;
     top: -1000%;
     right: 0;
-    background-color: transparent;
     width: 100%;
     height: 25vh;
     padding: 4.5rem 0 0 1rem;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(40px);
     -webkit-backdrop-filter: blur(40px);
     transition: top 0.4s;
@@ -75,6 +74,9 @@
   transition: all 0.4s;
 }
 @media screen and (min-width: 1023px) {
+  .header {
+    backdrop-filter: blur(40px);
+  }
   .nav-close,
   .nav-open {
     display: none;
