--- a/src/components/loader/Loader.css
+++ b/src/components/loader/Loader.css
@@ -1,6 +1,6 @@
 .section-loader {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: grid;
   place-content: center;
   background-color: rgba(0, 0, 0, 0.3);
