--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,8 @@ ul {
   list-style: none;
 }
 :root {
-  --hue: 214;
-  --color: hsl(var(--hue), 100%, 75%);
+  --hue: 250;
+  --color: hsl(var(--hue), 50%, 45%);
   --bg: url('https://articles-img.sftcdn.net/t_articles/auto-mapping-folder/sites/2/2023/03/fondo-pantalla-circulo-neon.jpg') no-repeat center;
   --bg-color: hsl(205, 67%, 10%);
   --color-text: hsl(0, 0%, 100%);
@@ -36,13 +36,15 @@ ul {
 	padding-block: 5rem 2rem;
 }
 .section-title {
+  text-align: center;
   font-size: var(--h1-fs);
   color: var(--color-text);
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
 }
 .section-subtitle {
+  text-align: center;
   font-size: var(--normal-fs);
-  margin-bottom: 0.25rem;
+  margin: .5rem 0;
 }
 .container {
 	margin-inline: 1.5rem;
