--- a/src/components/register/RegisterUser.css
+++ b/src/components/register/RegisterUser.css
@@ -31,3 +31,14 @@
 .disable {
   cursor: not-allowed;
 }
+.msg-error {
+  display: none;
+  margin-top: .3rem;
+  color: #000;
+  text-align: center;
+  font-size: var(--smaller-fs);
+  font-weight: var(--font-semibold);
+}
+.mostrar {
+  display: block;
+}
