correcciones en loginPage y funcion logOut agregada al boton de cierre de sesion

--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -45,6 +45,7 @@
     right: 20px;
     transform: translateY(-50%);
     font-size: var(--big-fs);
+    cursor: pointer;
 }
 .hidden {
     display: none;
