--- a/src/components/navbar/NavbarTask.css
+++ b/src/components/navbar/NavbarTask.css
@@ -67,6 +67,7 @@
   font-size: var(--normal-fs);
   font-weight: var(--font-semibold);
   color: var(--color-text);
+  cursor: pointer;
   padding: 0.4rem;
 }
 .btn-log-out:hover {
