--- a/src/components/createTask/CreateTask.css
+++ b/src/components/createTask/CreateTask.css
@@ -7,3 +7,14 @@
     row-gap: 1rem;
     text-align: center;
 }
+.box-date-time {
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: 1px solid rgba(255, 255, 255, .2);
+    border-radius: 40px;
+    color: var(--color-text);
+    padding: 10px;
+    font-size: var(--normal-fs);
+    margin-bottom: 1rem;
+}
