--- a/src/components/taskList/TaskList.css
+++ b/src/components/taskList/TaskList.css
@@ -9,12 +9,12 @@
     padding: 1rem;
 }
 .card-task {
-    min-height: 8rem;
-    width: 100%;
+    min-height: 12rem;
+    min-width: 290px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
+    align-items: flex-start;
+    row-gap: .7rem;
     border: none;
     border-radius: 10px;
     background-color: transparent;
@@ -25,7 +25,13 @@
     font-size: var(--normal-fs);
     padding: 1rem;
 }
-.btn-task {
+.box-buttons {
+    align-self: center;
+    display: flex;
+    column-gap: 1.5rem;
+    align-items: center;
+}
+.btn-task, .btn-edit {
     width: 6rem;
     margin-top: 4px;
     padding: 6px 8px;
@@ -36,16 +42,15 @@
     font-size: var(--normal-fs);
     transition: all 200ms;
 }
-.btn-task:hover{
+.btn-task {
+    background-color: transparent;
+    border: 1px solid #333;
+    color: var(--color-text);
+}
+.btn-task:hover, .btn-edit:hover{
     background: linear-gradient(105deg, #0ef, #c800ff);
     color: var(--color-text);
     transition: all 200ms;
-    letter-spacing: 1px;
-}
-@media screen and (320px <= width <= 375px) {
-    .card-task {
-        width: 280px;
-    }
 }
 @media screen and (min-width: 768px) {
     .container-task {
