--- a/src/components/createTask/CreateTask.css
+++ b/src/components/createTask/CreateTask.css
@@ -3,7 +3,8 @@
     color: var(--color-text);
 }
 .container-create-task {
-    place-content: center;
+    place-items: center;
+    grid-template-columns: 1fr;
     row-gap: 1rem;
     text-align: center;
 }
