--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -14,6 +14,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, .2);
     border-radius: 10px;
     color: var(--color-text);
+    overflow: hidden;
     padding: 30px 40px;
 }
 .wrapper h1 {
