ResetPass component agregado, RecoverPassword terminado

--- a/src/components/recPassword/RecoverPassword.css
+++ b/src/components/recPassword/RecoverPassword.css
@@ -3,4 +3,19 @@ main {
 	background-size: cover;
 	min-height: 100vh;
 	width: 100%;
+	color: var(--color-text);
+}
+.container-recover-pass {
+	place-items: center;
+}
+.recover-pass-form {
+	display: flex;
+	flex-direction: column;
+	row-gap: 1rem;
+}
+.recover-pass-form input {
+	margin-block: .5rem;
+}
+.subtitle-recover-pass {
+	margin-block: 1rem;
 }
